Set maven.compiler.release and java.version to 17